--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DATABASE_URL=mongodb+srv://task:A12345678@taskmaster2-qymqz.mongodb.net/taskmaster6000?retryWrites=true&w=majority
+SECRET=SEIRocks!
