--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bcrypt": "^3.0.6",
+    "bcrypt-nodejs": "0.0.3",
     "bootstrap": "^4.3.1",
+    "chokidar": "^3.2.1",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "gulp": "^4.0.2",
     "gulp-print": "^5.0.0",
+    "install": "^0.13.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.3",
     "morgan": "^1.9.1",
+    "node": "^12.11.1",
+    "node-pre-gyp": "^0.13.0",
     "react": "^16.9.0",
     "react-datepicker": "^2.9.6",
     "react-datetimepicker-bootstrap": "^1.1.2",
